--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 /* ========== BODY ========== */
 body {
-  background: linear-gradient(180deg, var(--bg-main), #ffffff);
+  background: linear-gradient(180deg, var(--bg-main), hsl(0, 100%, 96%));
   color: var(--text-main);
   overflow-x: hidden;
 }
@@ -146,7 +146,12 @@ h2 {
   display: grid;
   gap: 24px;
 }
-
+.about-grid p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: var(--text-soft);
+  
+}
 .about-grid img {
   width: 100%;
   border-radius: 60px;
@@ -284,7 +289,7 @@ footer {
 <header>
   <div class="hero">
     <div class="hero-avatar">
-      <img src="20240505_162429.jpg" alt="Liz">
+      <img src="Resized_20240218_165753_1708294572314.jpg" alt="Liz">
     </div>
     <h1>Hi, I’m Liz Leone 🌷</h1>
     <p>Web Dev and Designer ● AI app dev ● Hobbysist ● an extraterrestrial :p</p>
@@ -294,7 +299,7 @@ footer {
 <section>
   <h2>About Me 🌱</h2>
   <div class="card about-grid">
-    <img src="unnamed (2).jpg" alt="About Me">
+    <img src="unnamed (1).jpg" alt="About Me">
     <p>
       Hey hey Heyyy!!!💫<br><br> I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
       <br>
@@ -305,7 +310,7 @@ footer {
   </div>
 </section>
 <section>
-  <h2>Things I love 💕</h2>
+  <h2>Things I love 💕💫</h2>
   <div class="projects">
     <div class="project">
       <img src="d51f7ef9e6518630410dab98293faeb3.jpg">
@@ -322,7 +327,7 @@ footer {
       </div>
     </div>
     <div class="project">
-      <img src="7E16E81C-4A64-4657-9D0E-A6F338E2376E.JPG">
+      <img src="IMG_7704.jpg">
       <div>
         <h3>Cracking myself up lol ✨</h3>
         <p> lots of random photos :p </p>
@@ -346,7 +351,7 @@ footer {
      <a href="https://liz3509.github.io/Birthdaybasho/"><img src="Screenshot 2025-12-30 205231.png"></a>
       <div>
         <h3>Disco PARTY!! :p</h3>
-        <p>Just a fun game I built for Hack Clubs YSWS program :) </p>
+        <p>*Works on desktop better* Just a fun game I built for Hack Clubs YSWS program :) </p>
       </div>
     </div>
     <div class="project">
