--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ footer {
 <section>
   <h2>About Me 🌱</h2>
   <div class="card about-grid">
-    <img src="unnamed (1).jpg" alt="About Me">
+    <img src="IMG_0083.JPG" alt="About Me">
     <p>
       Hey hey Heyyy!!!💫<br><br> I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
       <br>
