--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@ header {
   width: 180px;
   height: 180px;
   border-radius: 50%;
-  padding: 6px;
-  background: linear-gradient(135deg, #ffffff, #fff0f0);
+
+  padding: 7px;
+  background: linear-gradient(135deg, #c368ff, #ffa86f);
   box-shadow: 0 0 35px rgb(255, 255, 255);
   animation: float 4s ease-in-out infinite;
 }
@@ -144,7 +145,7 @@ h2 {
 /* ========== ABOUT ========== */
 .about-grid {
   display: grid;
-  gap: 24px;
+  gap: 2px;
 }
 .about-grid p {
   font-size: 1rem;
@@ -152,11 +153,35 @@ h2 {
   color: var(--text-soft);
   
 }
+.about-grid p1 {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: var(--text-soft);
+text-decoration: wavy underline;
+font-style: italic;
+  }
 .about-grid img {
   width: 100%;
-  border-radius: 60px;
-  border-color: #fd8686;
-  stroke-width: 20%;
+  border-radius: 70px;
+  
+
+  height: 100%;
+  border-radius: 38%;
+
+  padding: 3px;
+  background: linear-gradient(135deg, #b74bff, #ffb8b8);
+  box-shadow: 0 0 35px rgb(255, 255, 255);
+}
+.mango img {
+  width: 100%;
+  border-radius: 38%;
+
+  height: 100%;
+
+
+  padding: 3px;
+  background: linear-gradient(135deg, #b74bff, #ffb8b8);
+  box-shadow: 0 0 35px rgb(255, 255, 255);
 }
 
 /* ========== PROJECTS ========== */
@@ -299,9 +324,11 @@ footer {
 <section>
   <h2>About Me 🌱</h2>
   <div class="card about-grid">
-    <img src="IMG_0083.JPG" alt="About Me">
-    <p>
-      Hey hey Heyyy!!!💫<br><br> I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
+    <img src="unnamed (2).jpg" alt="About Me">
+
+     <p> Hey hey Heyyy!!!💫
+
+      I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
       <br>
     <br> I'm open to collaborating or scheduling a meeting to talk about potential opportunities, creative projects, or start up ideas!  
     <br>
