--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ h2 {
 /* ========== ABOUT ========== */
 .about-grid {
   display: grid;
-  gap: 2px;
+  gap: 9px;
 }
 .about-grid p {
   font-size: 1rem;
@@ -324,10 +324,10 @@ footer {
 <section>
   <h2>About Me 🌱</h2>
   <div class="card about-grid">
-    <img src="unnamed (2).jpg" alt="About Me">
+    <img src="IMG_0350.jpg" alt="About Me">
 
      <p> Hey hey Heyyy!!!💫
-
+<br><br>
       I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
       <br>
     <br> I'm open to collaborating or scheduling a meeting to talk about potential opportunities, creative projects, or start up ideas!  
