--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ footer {
 <header>
   <div class="hero">
     <div class="hero-avatar">
-      <img src="Resized_20240218_165753_1708294572314.jpg" alt="Liz">
+      <img src="20240505_162429.jpg" alt="Liz">
     </div>
     <h1>Hi, I’m Liz Leone 🌷</h1>
     <p>Web Dev and Designer ● AI app dev ● Hobbysist ● an extraterrestrial :p</p>
@@ -327,7 +327,7 @@ footer {
     <img src="IMG_0350.jpg" alt="About Me">
 
      <p> Hey hey Heyyy!!!💫
-<br><br>
+<br>
       I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
       <br>
     <br> I'm open to collaborating or scheduling a meeting to talk about potential opportunities, creative projects, or start up ideas!  
