--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@ footer {
 <section>
   <h2>About Me 🌱</h2>
   <div class="card about-grid">
-    <img src="IMG_0350.jpg" alt="About Me">
+    <img src="IMG_0633.JPG" alt="About Me">
 
      <p> Hey hey Heyyy!!!💫
-<br>
+<br><br>
       I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
       <br>
     <br> I'm open to collaborating or scheduling a meeting to talk about potential opportunities, creative projects, or start up ideas!  
