--- a/index.html
+++ b/index.html
@@ -316,15 +316,15 @@ footer {
     <div class="hero-avatar">
       <img src="20240505_162429.jpg" alt="Liz">
     </div>
-    <h1>Hi, I’m Liz Leone 🌷</h1>
+    <h1>Hi, I’m Liz Leone! 🌷</h1>
     <p>Web Dev and Designer ● AI app dev ● Hobbysist ● an extraterrestrial :p</p>
   </div>
 </header>
 
 <section>
-  <h2>About Me 🌱</h2>
+  <h2>~ About Me ~ 🌱</h2>
   <div class="card about-grid">
-    <img src="IMG_0633.JPG" alt="About Me">
+    <img src="unnamed (4).jpg" alt="About Me">
 
      <p> Hey hey Heyyy!!!💫
 <br><br>
@@ -382,10 +382,10 @@ footer {
       </div>
     </div>
     <div class="project">
-      <img src="20240505_162956.jpg">
+      <img src="IMG_0350.jpg">
       <div>
         <h3>In the Works ✨</h3>
-        <p> Coming veryy soon (perhaps)... :o</p>
+        <p> Coming veryy soon (perhaps)... <br> maybe 6 or 7! business days.. :o</p>
       </div>
     </div>
   </div>
