--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ footer {
 <section>
   <h2>~ About Me ~ 🌱</h2>
   <div class="card about-grid">
-    <img src="unnamed (4).jpg" alt="About Me">
+    <img src="IMG_0633 (1).jpg" alt="About Me">
 
      <p> Hey hey Heyyy!!!💫
 <br><br>
@@ -382,7 +382,7 @@ footer {
       </div>
     </div>
     <div class="project">
-      <img src="IMG_0350.jpg">
+      <img src="IMG_0352.jpg">
       <div>
         <h3>In the Works ✨</h3>
         <p> Coming veryy soon (perhaps)... <br> maybe 6 or 7! business days.. :o</p>
