--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ footer {
       </div>
     </div>
     <div class="project">
-      <img src="IMG_0352.jpg">
+      <img src="20240505_162956.jpg">
       <div>
         <h3>In the Works ✨</h3>
         <p> Coming veryy soon (perhaps)... <br> maybe 6 or 7! business days.. :o</p>
