--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@ footer {
 <header>
   <div class="hero">
     <div class="hero-avatar">
-      <img src="20240505_162429.jpg" alt="Liz">
+      <img src="IMG_8997.JPG" alt="Liz">
     </div>
-    <h1>Hi, I’m Liz Leone! 🌷</h1>
+    <h1>Hi, I’m Liz Leone!</h1>
     <p>Web Dev and Designer ● AI app dev ● Hobbysist ● an extraterrestrial :p</p>
   </div>
 </header>
