--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@ footer {
 <header>
   <div class="hero">
     <div class="hero-avatar">
-      <img src="IMG_8997.JPG" alt="Liz">
+      <img src="20240505_162429.jpg" alt="Liz">
     </div>
-    <h1>Hi, I’m Liz Leone!</h1>
-    <p>Web Dev and Designer ● AI app dev ● Hobbysist ● an extraterrestrial :p</p>
+    <h1>Welcome! I’m Liz Leone!✨</h1>
+    <p>Web Dev and Designer ● AI app dev ● Hobbysist ● an extraterrestrial lol :p</p>
   </div>
 </header>
 
@@ -326,7 +326,7 @@ footer {
   <div class="card about-grid">
     <img src="IMG_0633 (1).jpg" alt="About Me">
 
-     <p> Hey hey Heyyy!!!💫
+     <p> greetings fellow traveler! 💫
 <br><br>
       I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas :p<br>
       <br>
