Made about me image smaller on mobile and changed font to Poppins

--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@ h2 {
 .about-grid p {
   font-size: 1.4rem;
   line-height: 1.6;
-  font-family:cursive;
-  text-decoration: wavy;
+  font-family: 'Poppins', sans-serif;
   color: var(--text-soft);
   text-align: center;
 }
@@ -306,7 +305,7 @@ footer {
   }
   .about-grid img {
     justify-self: center;
-    max-width: 280px;
+    max-width: 180px;
     padding: 3px;
   }
 }
