Fix opensite video player - add controls and close video tag

--- a/index.html
+++ b/index.html
@@ -301,17 +301,18 @@ footer {
 /* Responsive layout for mobile */
 @media (max-width: 699px) {
   .about-grid {
-    grid-template-columns: 1fr 1.3fr;
-    text-align: left;
+    grid-template-columns: 1fr;
+    text-align: center;
     gap: 20px;
   }
   .about-grid img {
-    max-width: 100%;
+    max-width: 250px;
     height: auto;
+    margin: 0 auto;
     padding: 3px;
   }
   .about-grid p {
-    text-align: left;
+    text-align: center;
   }
 }
 
@@ -386,7 +387,7 @@ footer {
   <h2>~My Projects~</h2>
   <div class="projects">
     <div class="project">
-      <a href="https://open4all.netlify.app/"><video type="video/mp4" src="Untitled design.mp4" loop muted></a>
+      <a href="https://open4all.netlify.app/"><video type="video/mp4" src="Untitled design.mp4" loop muted controls></video></a>
       <div>
         <h3>OpenSite.co</h3>
         <br>
