Add autoplay to opensite video

--- a/index.html
+++ b/index.html
@@ -350,8 +350,7 @@ footer {
 
      <p> Greetings fellow traveler! 💫
 <br><br>
-      I enjoy making portfolios, AI apps, websites, games, and creating useful app ideas. :p<br>
-      <br>
+   I make stuff :p Websites, apps, portfolios, etc 🌏       
     Feel free to reach out! :) I'm open to help build ideas, sites, projects etc. for free, as I don't focus too much on profit!🚀
   </p>
   </div>
@@ -387,7 +386,7 @@ footer {
   <h2>~My Projects~</h2>
   <div class="projects">
     <div class="project">
-      <a href="https://open4all.netlify.app/"><video type="video/mp4" src="Untitled design.mp4" loop muted controls></video></a>
+      <a href="https://open4all.netlify.app/"><video type="video/mp4" src="Untitled design.mp4" loop muted controls autoplay></video></a>
       <div>
         <h3>OpenSite.co</h3>
         <br>
