Change greeting text to Fredoka One fun font

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Liz Leone — Portfolio</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Fredoka+One&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
@@ -153,6 +153,12 @@ h2 {
   font-family: 'Poppins', sans-serif;
   color: var(--text-soft);
   text-align: left;
+}
+
+.greeting {
+  font-family: 'Fredoka One', sans-serif;
+  font-size: 1.5rem;
+  color: var(--accent);
 }
 .about-grid img {
   width: 100%;
@@ -348,7 +354,7 @@ footer {
     <img src="1.png" style="border-color: #ffffff; stroke: #ffb8b8; stroke-width: 10%;" alt="About Me">
 <br>
 
-     <p> Greetings fellow traveler! 💫
+     <p><span class="greeting">Greetings fellow traveler! 💫</span>
 <br><br>
    I make stuff :p Websites, apps, portfolios, etc 🌏       
     Feel free to reach out! :) I'm open to help build ideas, sites, projects etc. for free, as I don't focus too much on profit!🚀
